# ctxpack

./: .gitignore  README.md  main.py  pyproject.toml
docs/: pypi_public_memo.md  testing.md
src/ctxpack/: cli.py  collector.py  gitignore.py  reader.py  token.py  tree.py  writer.py
tests/: test_cli.py  test_collector.py  test_gitignore.py  test_reader.py  test_token.py  test_tree.py  test_writer.py
tools/runtest/: gen_test_data.py  runbook.md
