[project]
name = "pyctxpack"
version = "0.1.0"
description = "Combine source files into a single text file for AI context (ChatGPT, Claude, Gemini)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "pekokana" }
]

keywords = ["ai", "llm", "context", "development", "cli", "prompt-engineering"]

# PyPIの検索タグ（Classifiers）を追加
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "pathspec>=1.0.4",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.2.0",
    "ruff>=0.15.6",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/pekokana/ctxpack"
Repository = "https://github.com/pekokana/ctxpack"
Issues = "https://github.com/pekokana/ctxpack/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pyctxpack = "ctxpack.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ctxpack"]
